--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
+    "gulp-htmlmin": "^1.2.0",
     "gulp-less": "^3.0.3"
   }
 }
