--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,8 @@ github_username:  jekyll
 
 # Build settings
 markdown: kramdown
+source: src
+destination: public
 gems:
 - jekyll-sitemap
 exclude:
@@ -21,3 +23,5 @@ exclude:
 - bower.json
 - Gemfile
 - Gemfile.lock
+keep_files:
+- dist
