--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
   "homepage": "https://github.com/ajwhite/jekyll-portfolio#readme",
   "devDependencies": {
     "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^3.1.0",
     "gulp-concat": "^2.6.0",
     "gulp-htmlmin": "^1.2.0",
-    "gulp-less": "^3.0.3"
+    "gulp-imagemin": "^2.3.0",
+    "gulp-less": "^3.0.3",
+    "imagemin-pngquant": "^4.2.0"
   }
 }
