--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,11 @@ url: "http://yourdomain.com" # the base hostname & protocol for your site
 twitter_username: jekyllrb
 github_username:  jekyll
 
+collections:
+  projects:
+    output: true
+    permalink: /projects/:path/
+
 # Build settings
 markdown: kramdown
 source: src
