--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
     "bootstrap": "~3.3.5",
     "font-awesome": "~4.4.0",
     "d3": "~3.5.6",
-    "typed.js": "~1.1.1"
+    "typed.js": "~1.1.1",
+    "lodash": "~3.10.1"
   }
 }
