--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "font-awesome": "~4.4.0",
     "d3": "~3.5.6",
     "typed.js": "~1.1.1",
-    "lodash": "~3.10.1"
+    "lodash": "~3.10.1",
+    "protonet/jquery.inview": "~1.0.0"
   }
 }
