--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,12 @@ collections:
     output: true
     permalink: /projects/:path/
 
+permalink: /:categories/:title
+
+tags:
+- gulpjs
+- angularjs
+
 # Build settings
 markdown: kramdown
 source: src
