--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "typed.js": "~1.1.1",
     "lodash": "~3.10.1",
     "inview": "git@github.com:protonet/jquery.inview.git#5133162ce4dda044d2b08c3d67a1ce19a612f4bb",
-    "Chart.js": "~0.2.0"
+    "Chart.js": "~0.2.0",
+    "fluid-labels": "~0.1.1"
   }
 }
