--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
     "inview": "git@github.com:protonet/jquery.inview.git#5133162ce4dda044d2b08c3d67a1ce19a612f4bb",
     "Chart.js": "~0.2.0",
     "fluid-labels": "~0.1.1",
-    "masonry": "~3.3.2"
+    "masonry": "~3.3.2",
+    "waypoints": "~4.0.0"
   }
 }
