--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
     "gulp-autoprefixer": "^3.1.0",
     "gulp-concat": "^2.6.0",
     "gulp-htmlmin": "^1.2.0",
+    "gulp-if": "^2.0.0",
     "gulp-imagemin": "^2.3.0",
     "gulp-less": "^3.0.3",
+    "gulp-minify-css": "^1.2.1",
+    "gulp-uglify": "^1.4.2",
+    "gulp-util": "^3.0.7",
     "imagemin-pngquant": "^4.2.0"
   }
 }
