--- a/src/_data/blogs.yml
+++ b/src/_data/blogs.yml
@@ -5,7 +5,7 @@
   url: http://mattbriggs.net
 
 - name: Addy Osmani
-  url: http://addyosmani.com/url
+  url: http://addyosmani.com
 
 - name: Todd Motto
   url: http://toddmotto.com
@@ -32,4 +32,4 @@
   url: http://url.invisionapp.com
 
 - name: Robin at Work
-  url: https://robinpowered.com/url
+  url: https://robinpowered.com
