initial collection setup - having an issue with collection files served raw, may need to update to v3

--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,10 @@ collections:
   projects:
     output: true
     permalink: /projects/:path/
+  labs:
+    output: true
+    output_ext: html
+    permalink: /labs/:path
 
 permalink: /:categories/:title
 
