--- a/circle.yml
+++ b/circle.yml
@@ -7,6 +7,9 @@ dependencies:
     - make circle
     - CIRCLE_SHA=$CIRCLE_SHA1 CIRCLE_BUILD_NUM=$CIRCLE_BUILD_NUM jekyll build
     - gulp html
+  cache_directories:
+    - "node_modules/"
+    - "bower_components/"
 
 test:
   post:
