--- a/circle.yml
+++ b/circle.yml
@@ -20,3 +20,7 @@ deployment:
     branch: master
     commands:
       - shipit production deploy
+  develop:
+    branch: develop
+    commands:
+      - shipit develop deploy
