external blog linking

--- a/src/_data/blogs.yml
+++ b/src/_data/blogs.yml
@@ -29,7 +29,7 @@
   url: http://slackhq.com
 
 - name: Invision
-  url: http://url.invisionapp.com
+  url: http://blog.invisionapp.com
 
 - name: Robin at Work
-  url: https://robinpowered.com
+  url: https://robinpowered.com/blog
