lazy loading lib

--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
     "Chart.js": "~0.2.0",
     "fluid-labels": "~0.1.1",
     "masonry": "~3.3.2",
-    "waypoints": "~4.0.0"
+    "waypoints": "~4.0.0",
+    "jquery.lazyload": "~1.9.7"
   }
 }
