--- a/src/_data/tags.yml
+++ b/src/_data/tags.yml
@@ -26,6 +26,13 @@ nodejs:
     background: '#505246'
     font: '#fff'
 
+letsencrypt:
+  label: Security
+  icon: tags/letsencrypt.png
+  color:
+    background: '#516ec1'
+    font: '#fff'
+
 wordpress:
   label: WordPress
   icon: tags/wordpress.jpg
