--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "url": "https://github.com/ajwhite/jekyll-portfolio/issues"
   },
   "homepage": "https://github.com/ajwhite/jekyll-portfolio#readme",
+  "scripts": {
+    "start": "node server/index.js"
+  },
   "devDependencies": {
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
@@ -26,5 +29,11 @@
     "gulp-util": "^3.0.7",
     "imagemin-pngquant": "^4.2.0",
     "shipit-deploy": "^2.0.0"
+  },
+  "dependencies": {
+    "babel": "^6.3.26",
+    "babel-core": "^6.3.26",
+    "babel-preset-es2015": "^6.3.13",
+    "restify": "^4.0.3"
   }
 }
