--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "babel": "^6.3.26",
     "babel-core": "^6.3.26",
     "babel-preset-es2015": "^6.3.13",
+    "nodemailer": "^1.11.0",
     "restify": "^4.0.3"
   }
 }
