--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "babel-core": "^6.3.26",
     "babel-preset-es2015": "^6.3.13",
     "nodemailer": "^1.11.0",
+    "request": "^2.67.0",
     "restify": "^4.0.3"
   }
 }
