--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "babel-preset-es2015": "^6.3.13",
     "node-fetch": "^1.3.3",
     "nodemailer": "^1.11.0",
+    "react": "^0.14.7",
+    "react-dom": "^0.14.7",
     "request": "^2.67.0",
     "restify": "^4.0.3"
   }
