gulp-image and parallelization

--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "start": "node server/index.js"
   },
   "devDependencies": {
+    "concurrent-transform": "^1.0.0",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-concat": "^2.6.0",
     "gulp-htmlmin": "^1.2.0",
     "gulp-if": "^2.0.0",
+    "gulp-image": "^1.3.1",
     "gulp-imagemin": "^2.4.0",
     "gulp-less": "^3.0.3",
     "gulp-minify-css": "^1.2.1",
