--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,7 @@
     "masonry": "~3.3.2",
     "waypoints": "~4.0.0",
     "jquery.lazyload": "~1.9.7",
-    "raven-js": "~2.2.0"
+    "raven-js": "~2.2.0",
+    "octicons": "~3.5.0"
   }
 }
