new intro section slider

--- a/bower.json
+++ b/bower.json
@@ -25,6 +25,7 @@
     "waypoints": "~4.0.0",
     "jquery.lazyload": "~1.9.7",
     "raven-js": "~2.2.0",
-    "octicons": "~3.5.0"
+    "octicons": "~3.5.0",
+    "owl.carousel": "~2.0.0-beta.3"
   }
 }
