--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "babel-core": "^6.3.26",
     "babel-preset-es2015": "^6.3.13",
+    "moment": "^2.12.0",
     "node-fetch": "^1.3.3",
     "nodemailer": "^1.11.0",
     "react": "^0.14.7",
