--- a/bower.json
+++ b/bower.json
@@ -26,6 +26,7 @@
     "jquery.lazyload": "~1.9.7",
     "raven-js": "~2.2.0",
     "octicons": "~3.5.0",
-    "owl.carousel": "~2.0.0-beta.3"
+    "owl.carousel": "~2.0.0-beta.3",
+    "instantclick": "~3.1.0"
   }
 }
