--- a/next/package.json
+++ b/next/package.json
@@ -15,6 +15,7 @@
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-icons": "^2.2.5",
-    "react-konva": "^1.1.3"
+    "react-konva": "^1.1.3",
+    "react-motion": "^0.5.0"
   }
 }
