--- a/next/package.json
+++ b/next/package.json
@@ -6,16 +6,20 @@
     "start": "next start"
   },
   "dependencies": {
+    "babel-plugin-wrap-in-js": "^1.1.1",
     "glamor": "^2.20.25",
     "glamorous": "^3.17.0",
+    "highlight.js": "^9.11.0",
     "jquery": "^3.2.1",
     "konva": "^1.6.3",
     "lodash": "^4.17.4",
     "next": "^2.4.0",
+    "raw-loader": "^0.5.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-icons": "^2.2.5",
     "react-konva": "^1.1.3",
+    "react-markdown": "^2.5.0",
     "react-motion": "^0.5.0"
   }
 }
